# rwest_io

./: .dir-locals.el  .env  .hgignore  Cargo.toml  README.org  build.sh  publish.el  rustfmt.toml  rwest-io.el  serve.sh  todo.org
auth/: Cargo.toml
auth/src/: cfg.rs  main.rs
client/: Cargo.toml  index.html
client/src/: app.rs  lib.rs
el/: Cargo.toml  elsrv.el
el/src/: api.rs  app.rs  cfg.rs  lib.rs  main.rs
el/src/api/: b.rs  index.rs
el/wasm/: Cargo.toml  build.sh
el/wasm/src/: lib.rs
el/wasm/web/: app.js  index.html  package.json
el/wasm/web/xterm/: xterm.js
elsrv/: Cargo.toml  elsrv.el
elsrv/migrations/: 1_setup.sql  2_users.sql
elsrv/src/: api.rs  cfg.rs  db.rs  lib.rs  main.rs
elsrv/src/api/: auth.rs  run.rs
org/: blog.org  clean.theme  err.org  index.org  notes.org  projects.org  pub.el
org/blog/: octatrack_set_prep.org  playing_with_nws.org  rock_and_roll.org  sitemap  sitemap.org
org/media/: nws_fch.puml
org/notes/: comp_rand.org  drum_chops.org  installing_emacs.org  knowledge_and_information.org  mercurial.org  progressive_web_apps.org  sitemap  sitemap.org
org/projects/: mpk.org  org-notion.org  pwn.org  rwest_io.org  scm1.org  sitemap  sitemap.org
proto/: Cargo.toml
proto/migrations/: 2_users.sql
proto/src/: auth.rs  db.rs  error.rs  lib.rs.orig
server/: Cargo.toml
server/src/: main.rs
src/: gen.rs  main.rs
static/style/css/: index.css  org.css  org2.css  page.css
status/: Cargo.toml
templates/: base.html  index.html  rocks.html
