[package]
name = "rwest_io"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
askama = { version = "0.11", features = ["with-axum"] }
askama_axum = "0.1.0"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1