[package]
name = "elsrv"
version = "0.1.0"
edition = "2021"

[dependencies]
async-session = "3.0.0"
axum = { version = "0.5.13", features = ["headers"] }
axum-extra = { version = "0.3.6", features = ["spa"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
headers = "0.3"
http = "0.2"
oauth2 = "4.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
orgize = "0.9.0"
serde = { version = "1.0.140", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "any", "uuid", "chrono", "macros", "postgres"] }
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "time", "net", "macros"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
anyhow = "1.0.58"
mime = "0.3.16"
tower = "0.4.13"
