[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.13", features = ["headers"] }
axum-extra = { version = "0.3.6", features = ["spa"] }
async-session = "3.0.0"
oauth2 = "4.2.3"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "time", "net", "macros"] }
tracing = "0.1.35"
headers = "0.3"
http = "0.2"
thiserror = "1.0.31"
async-trait = "0.1.57"
reqwest = { version = "0.11.11", features = ["json"] }

[profile.dev.package.sqlx-macros]
opt-level = 3